traces/bug_250.txt
#250
kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3086: error: Deadlock
  Potential self deadlock. `CheckpointTest_MB_47551_Test::TestBody` locks `&(this->manager->queueLock)` in `class CheckpointTest_MB_47551_Test` twice.

kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3086:20: In method `CheckpointTest_MB_47551_Test::TestBody`
3084. 
3085.     // But high-seqno should use the open CP
3086.     auto cursor2 = manager->registerCursorBySeqno(
                         ^
3087.             "cursor2", 1002, CheckpointCursor::Droppable::Yes);
3088. 

kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3086:20: Method call: `CheckpointManager::registerCursorBySeqno`
3084. 
3085.     // But high-seqno should use the open CP
3086.     auto cursor2 = manager->registerCursorBySeqno(
                         ^
3087.             "cursor2", 1002, CheckpointCursor::Droppable::Yes);
3088. 

kv_engine/engines/ep/src/checkpoint_manager.cc:259:33:  locks `&(this->manager->queueLock)` in `class CheckpointTest_MB_47551_Test`
257.         uint64_t startBySeqno,
258.         CheckpointCursor::Droppable droppable) {
259.     std::lock_guard<std::mutex> lh(queueLock);
                                     ^
260.     return registerCursorBySeqno(lh, name, startBySeqno, droppable);
261. }

kv_engine/engines/ep/src/checkpoint_manager.cc:260:12: Method call: `CheckpointManager::registerCursorBySeqno`
258.         CheckpointCursor::Droppable droppable) {
259.     std::lock_guard<std::mutex> lh(queueLock);
260.     return registerCursorBySeqno(lh, name, startBySeqno, droppable);
                ^
261. }
262. 

kv_engine/engines/ep/src/checkpoint_manager.cc:283:13: Method call: `CheckpointManager::removeCursor`
281.     for (const auto& cursor : cursors) {
282.         if (cursor.first == name) {
283.             removeCursor(lh, cursor.second.get());
                 ^
284.             break;
285.         }

kv_engine/engines/ep/src/checkpoint_manager.cc:474:9:  locks `&(this->manager->queueLock)` in `class CheckpointTest_MB_47551_Test`
472.         queueLock.unlock();
473.         runGetItemsHook(cursor, vb.getId());
474.         queueLock.lock();
             ^
475.     }
476. 
